crates/tools/cron/src/tests/unit/snapshots/cron__tests__unit__minute__multiple__all__all_periodic.snap
---
source: crates/tools/cron/src/tests/unit/minute.rs
expression: result
---
Ok(
    (
        "",
        MinuteRule {
            kinds: [
                MinuteKind {
                    range: (
                        Minute(
                            0,
                        ),
                        Minute(
                            59,
                        ),
                    ),
                    periodic: MinutePeriodic(
                        1,
                    ),
                },
                MinuteKind {
                    range: (
                        Minute(
                            0,
                        ),
                        Minute(
                            59,
                        ),
                    ),
                    periodic: MinutePeriodic(
                        2,
                    ),
                },
            ],
        },
    ),
)
